2005-02-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Plot with boxerrorbars and three columns
	of input data hit a rare code path that set the boxwidth wrong in some
	cases. Fixes bug #1101409.

2005-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/time.c (xstrftime): Shift reply range of %I and %l time
	formats from [0:11] to [1:12].

	* docs/gnuplot.doc (time/date specifiers): Fix descriptions of
	hour format specifiers (explain 0-filled vs. non-filled default,
	give correct output ranges).

2005-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/set.c (set_separator): Replace literal TAB character in
	source by a \t.

	* src/command.c (input_line, input_line_len): Renamed to
	gp_input_line and gp_input_line_len respectively, to avoid a
	conflict of input_line with a like name non-standard library
	function on QNX.

	* src/command.h: Renamed declarations of these, too.

	* all over the place: Renamed usages of these variables.  Some
	CodeStyle cleanups, while at it.

2005-01-31  Ethan Merritt  <merritt@u.washington.edu>

	 * util.c (getusername): Don't try to free a string pointer that may
	 have been returned by getenv.  Fixes bug #1111804.

2005-01-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.mgw: Mingw 2.x does not HAVE_SYS_PARAM_H.

	* src/win/wgnuplib.h: Mingw 2.x needs to #define _fstr* functions.

2005-01-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Remove deprecated references to "set pm3d solid" and
	"set pm3d transparent".

2005-01-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/pgnuplot.c (PostString): Fix transmission of 8-bit
	characters to function taking ints by cast to unsigned char.

2005-01-25  Ethan Merritt  <merritt@u.washington.edu>

	* term/ai.trm (AI_reset) term/corel.trm (COREL_reset) term/epslatex.trm
	(EPSL_init EPSL_text): Remove extraneous % characters in strings output
	by fputs().
